include/ecainference.h

/* ── Opaque handles ── */
typedef struct eci_model_s       eci_model_t;
typedef struct eci_context_s      eci_context_t;
typedef struct eci_conversation_s eci_conversation_t;
typedef struct eci_executor_s     eci_executor_t;     /* standard (non-batched) */
/* ── Error codes ── */
typedef enum {
    ECI_OK = 0,
    ECI_ERR_INVALID_ARG = 1,
    ECI_ERR_INVALID_HANDLE = 2,
    ECI_ERR_LOAD_FAILED = 3,
    ECI_ERR_NO_SLOT = 4,
    ECI_ERR_DECODE_FAILED = 5,
    ECI_ERR_OVERFLOW = 6,
    ECI_ERR_NOT_SUPPORTED = 7,
    ECI_ERR_INTERNAL = 99,
} eci_result_t;
/* ── Model params ── */
typedef struct {
    const char* model_path;
    int gpu_layers;          /* -1 = all, 0 = CPU only */
    int threads;             /* -1 = auto */
    bool flash_attn;
    eci_kv_type_t kv_cache_type;
} eci_model_params_t;
/* ── Context params ── */
typedef struct {
    uint32_t context_size;   /* n_ctx */
    uint32_t batch_size;     /* n_batch */
    uint32_t seq_max;        /* max sequences (batch mode) */
    eci_pooling_type_t pooling_type;  /* for embedding models */
} eci_context_params_t;
/* ── Sampling params (full pipeline) ── */
typedef struct {
    float temperature;
    float top_p;
    int   top_k;
    float min_p;
    float repeat_penalty;
    int   repeat_last_n;     /* -1 = full context */
    float penalty_present;  /* presence penalty */
    int   max_tokens;
    bool  ignore_eos;
} eci_sampling_params_t;
/* KV clear: clear KV for a specific seq_id only.
 * Does NOT affect other conversations. */
eci_result_t eci_kv_clear_seq(eci_context_t* ctx, int seq_id);
/* KV size: how many tokens are stored for a seq_id.
 * Returns -1 on error. */
int eci_kv_seq_tokens(eci_context_t* ctx, int seq_id);
/* Causal attention control (per-context, per-call).
 * Set false before decoding image embeddings, true for text.
 * Vision path handles this internally — exposed for advanced use. */
eci_result_t eci_set_causal_attn(eci_context_t* ctx, bool causal);
/* Check if generated text contains any anti-prompt string.
 * Returns index of matched anti-prompt (>=0) or -1 if none. */
int eci_check_anti_prompts(const char* text, const char** anti_prompts, int count);
/* ════════════════════════════════════════════════════
 *  Grammar (GBNF)
 * ════════════════════════════════════════════════════ */

/* Opaque grammar handle. */
typedef struct eci_grammar_s eci_grammar_t;
/* Create a GBNF grammar sampler. Returns null if parsing fails.
 * The grammar is applied during sampling — only tokens matching the
 * grammar are selected. Pass null to eci_*_sample_with_grammar to
 * sample without grammar constraint.
 * The grammar must be created from the same model's vocab. */
eci_grammar_t* eci_grammar_create(eci_model_t* model, const char* grammar_str, const char* grammar_root);
/* Free a grammar. */
void eci_grammar_free(eci_grammar_t* grammar);
/* Sample with grammar constraint. Like eci_executor_sample / eci_conversation_sample
 * but applies the grammar sampler before token selection. */
eci_result_t eci_executor_sample_grammar(eci_executor_t* exec, const eci_sampling_params_t* params,
                                             eci_grammar_t* grammar, int* out_token);
eci_result_t eci_conversation_sample_grammar(eci_conversation_t* conv, const eci_sampling_params_t* params,
                                                eci_grammar_t* grammar, int* out_token);
/* ════════════════════════════════════════════════════
 *  Chat template
 * ════════════════════════════════════════════════════ */

/* Apply the model's built-in chat template to a list of messages.
 * Uses llama_chat_apply_template (supports Qwen, Llama, ChatML, etc.).
 * Pass tmpl=null to use the model's default template.
 * messages: array of {role, content} pairs.
 * add_assistant: append the assistant turn marker.
 * out_text: receives the formatted prompt (caller frees with eci_free_string).
 * Returns ECI_OK or error. */
typedef struct { const char* role; const char* content; } eci_chat_message_t;
eci_result_t eci_apply_chat_template(eci_model_t* model, const char* tmpl,
                                        const eci_chat_message_t* messages, int n_messages,
                                        bool add_assistant,
                                        char** out_text);
/* ════════════════════════════════════════════════════
 *  Vision on standard executor
 * ════════════════════════════════════════════════════ */

/* Prompt the standard executor with text + images.
 * Like eci_executor_prompt but processes image markers via the mmproj projector.
 * The executor uses seq_id 0 — images are encoded and decoded with non-causal attention.
 * Must be called with no pending tokens (flush before vision prompt).
 * After this call, call eci_executor_infer as normal. */
eci_result_t eci_executor_prompt_with_images(eci_executor_t* exec,
                                                 eci_model_t* model,
                                                 const char* text,
                                                 const char** image_data_ptrs,
                                                 const int* image_sizes,
                                                 int n_images);
/* ════════════════════════════════════════════════════
 *  Backend safety layer
 * ════════════════════════════════════════════════════ */

/* Probe: validate the caller's config works on this backend.
 * Does a minimal decode. Does NOT change config -- just validates.
 * Returns ECI_OK if the config works, ECI_ERR_DECODE_FAILED if not. */
eci_result_t eci_probe_backend(eci_context_t* ctx);
/* Safe context creation with progressive fallback.
 * Tries the caller's requested config first (from ECAssistantLLM config).
 * If it fails, progressively reduces gpu_layers: N -> N/2 -> N/4 -> ... -> 0.
 * The caller's config (KV type, batch size, FA, seq_max) is RESPECTED --
 * only gpu_layers is reduced during fallback.
 * model may be reloaded with fewer gpu_layers (caller passes model**). */
eci_result_t eci_create_context_safe(eci_model_t** model,
                                      const eci_model_params_t* model_params,
                                      const eci_context_params_t* ctx_params,
                                      int requested_gpu_layers,
                                      eci_context_t** out_ctx);
/* VRAM guard: check if enough VRAM is available for an operation. */
bool eci_vram_available(size_t needed_bytes);
/* Backend state queries -- what the probe found about THIS config */
bool        eci_backend_probe_passed(void);
const char* eci_backend_name(void);
const char* eci_backend_probe_error(void);
bool        eci_backend_needs_kv_flush(void);
bool        eci_backend_gpu_layers_reduced(void);
int         eci_backend_effective_gpu_layers(void);
int         eci_backend_original_gpu_layers(void);
/* KV flush: flush stale K/V cells after clearing (Vulkan bug #26744).
 * Automatically called in eci_pool_return when eci_backend_needs_kv_flush() is true. */
eci_result_t eci_kv_flush(eci_context_t* ctx, int seq_id);