csharp/Interop/EciNative.cs


    [DllImport(Lib, EntryPoint = "eci_kv_clear_seq", CallingConvention = CallingConvention.Cdecl)]
    public static extern EciResult KvClearSeq(IntPtr context, int seqId);

    [DllImport(Lib, EntryPoint = "eci_kv_seq_tokens", CallingConvention = CallingConvention.Cdecl)]
    public static extern int KvSeqTokens(IntPtr context, int seqId);

    [DllImport(Lib, EntryPoint = "eci_set_causal_attn", CallingConvention = CallingConvention.Cdecl)]
    public static extern EciResult SetCausalAttn(IntPtr context, [MarshalAs(UnmanagedType.U1)] bool causal);

    // ── Anti-prompt detection ──

    [DllImport(Lib, EntryPoint = "eci_check_anti_prompts", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public static extern int CheckAntiPrompts([MarshalAs(UnmanagedType.LPStr)] string text,
        [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] antiPrompts, int count);

    // ── Backend safety ──

    [DllImport(Lib, EntryPoint = "eci_probe_backend", CallingConvention = CallingConvention.Cdecl)]
    public static extern EciResult ProbeBackend(IntPtr context);

    [DllImport(Lib, EntryPoint = "eci_create_context_safe", CallingConvention = CallingConvention.Cdecl)]
    public static extern EciResult CreateContextSafe(ref IntPtr model, in EciModelParams modelParams,
        in EciContextParams ctxParams, int requestedGpuLayers, out IntPtr context);

    [DllImport(Lib, EntryPoint = "eci_vram_available", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool VramAvailable(long neededBytes);

    [DllImport(Lib, EntryPoint = "eci_backend_probe_passed", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool BackendProbePassed();

    [DllImport(Lib, EntryPoint = "eci_backend_name", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr BackendName();

    [DllImport(Lib, EntryPoint = "eci_backend_probe_error", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr BackendProbeError();

    [DllImport(Lib, EntryPoint = "eci_backend_needs_kv_flush", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool BackendNeedsKvFlush();

    [DllImport(Lib, EntryPoint = "eci_backend_gpu_layers_reduced", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool BackendGpuLayersReduced();

    [DllImport(Lib, EntryPoint = "eci_backend_effective_gpu_layers", CallingConvention = CallingConvention.Cdecl)]
    public static extern int BackendEffectiveGpuLayers();

    [DllImport(Lib, EntryPoint = "eci_backend_original_gpu_layers", CallingConvention = CallingConvention.Cdecl)]
    public static extern int BackendOriginalGpuLayers();

    [DllImport(Lib, EntryPoint = "eci_kv_flush", CallingConvention = CallingConvention.Cdecl)]
    public static extern EciResult KvFlush(IntPtr context, int seqId);

    // ── Grammar (GBNF) ──

    [DllImport(Lib, EntryPoint = "eci_grammar_create", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public static extern IntPtr GrammarCreate(IntPtr model, [MarshalAs(UnmanagedType.LPStr)] string grammarStr, [MarshalAs(UnmanagedType.LPStr)] string grammarRoot);

    [DllImport(Lib, EntryPoint = "eci_grammar_free", CallingConvention = CallingConvention.Cdecl)]
    public static extern void GrammarFree(IntPtr grammar);

    [DllImport(Lib, EntryPoint = "eci_executor_sample_grammar", CallingConvention = CallingConvention.Cdecl)]
    public static extern EciResult ExecutorSampleGrammar(IntPtr executor, in EciSamplingParams parameters, IntPtr grammar, out int token);

    [DllImport(Lib, EntryPoint = "eci_conversation_sample_grammar", CallingConvention = CallingConvention.Cdecl)]
    public static extern EciResult ConversationSampleGrammar(IntPtr conversation, in EciSamplingParams parameters, IntPtr grammar, out int token);

    // ── Chat template ──

    [DllImport(Lib, EntryPoint = "eci_apply_chat_template", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public static extern EciResult ApplyChatTemplate(IntPtr model, [MarshalAs(UnmanagedType.LPStr)] string? tmpl,
        IntPtr messages, int nMessages, [MarshalAs(UnmanagedType.U1)] bool addAssistant, out IntPtr outText);

    // ── Vision on standard executor ──

    [DllImport(Lib, EntryPoint = "eci_executor_prompt_with_images", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public static extern EciResult ExecutorPromptWithImages(IntPtr executor, IntPtr model,
        [MarshalAs(UnmanagedType.LPStr)] string text,
        IntPtr[] imageData, int[] imageSizes, int nImages);
}
